[Demo_2PARMA] Add Demo3
This add the first version of the third demo for the 2PARMA project.
This demo mainly targets a 4 cores i7 machine and consists on 2 main steps
which are accompanied by on-screen explanations (to be added).

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/demos/CMakeLists.txt
+++ b/demos/CMakeLists.txt
@@ -8,3 +8,14 @@ install(PROGRAMS "${PROJECT_BINARY_DIR}/demos/bbque2PARMADemo2.sh"
 	DESTINATION ${BBQUE_PATH_APPS}
 	COMPONENT BarbequeDEMOS
 	RENAME bbque-2parma-demo2)
+
+#----- Deploy the 2PARMA DEMO3 script
+configure_file (
+	"${PROJECT_SOURCE_DIR}/demos/bbque2PARMADemo3.sh.in"
+	"${PROJECT_BINARY_DIR}/demos/bbque2PARMADemo3.sh"
+	@ONLY
+)
+install(PROGRAMS "${PROJECT_BINARY_DIR}/demos/bbque2PARMADemo3.sh"
+	DESTINATION ${BBQUE_PATH_APPS}
+	COMPONENT BarbequeDEMOS
+	RENAME bbque-2parma-demo3)
