[BospShell] Add 2PARMA Demo3
This is a shortcut to run the third demo for the 2PARMA project.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -250,6 +250,13 @@ aterm +sb -fn $FONT -geometry 125x30+705-17 \
 		-e bbque-2parma-demo2 $TRG &
 }
 
+function 2parma-demo3 {
+TRG="${1:-Numa}"
+echo "Starting 2PARMA Demo3, Target [$TRG]..."
+aterm +sb -fn $FONT -geometry 125x30+705-17 \
+		-title "BBQUE v0.8 (Betty Bacon) - 2PARMA Demo3 [Target $TRG]" \
+		-e bbque-2parma-demo3 $TRG &
+}
 
 ################################################################################
 # PARSEC (v2.1) Benchmarks Commands
