[Daemon] Bugfix run-time folder permissions
A new daemon configuration option has been added which allows to specify the
BBQ "run-time folder", i.e. where FIFOs and other run-time generated blobs
are stored.

The daemon startup service ensure this folder is user-writable, this is
required in order to ensure a proper initialization of application FIFOs.

TODO: find a better solution, perhaps based on groups permissions.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbqued.defaults.in
+++ b/config/bbqued.defaults.in
@@ -10,6 +10,9 @@ BIN='${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_BBQ}/barbeque'
 # The BBQ configuration file
 CONF='${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_CONF}/${BBQUE_CONF_FILE}'
 #
+# The BBQ run-time folder
+BRTF='${CMAKE_INSTALL_PREFIX}/${BBQUE_PATH_VAR}'
+#
 # The BBQ daemon PID file
 PIDFILE='${CMAKE_INSTALL_PREFIX}/${BBQUE_DAEMON_PIDFILE}'
 #
