[Demo_2PARMA] Dump ProfileManager notices
The notice level logs of the ProfileManager are dumped by default with
this new configuration.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bbque_2parma_demo2.conf.in
+++ b/config/bbque_2parma_demo2.conf.in
@@ -79,6 +79,7 @@ rootCategory = ERROR, raFile
 category.bq.rm =        NOTICE
 category.bq.am =        NOTICE
 category.bq.ra =        NOTICE
+category.bq.om =        NOTICE
 
 ###
 # Root Appender
