--- a/tools/bbqueLogPlots.sh.in
+++ b/tools/bbqueLogPlots.sh.in
@@ -9,6 +9,8 @@ BBQUE_LOGFILE="${BBQUE_LOGFILE:-$BBQUE_SYSROOT/var/bbque/bbque.log}"
 
 BBQUE_GNUPLOT_PARAMS="--dataid --autolegend --stream --xlen 50 -ymin 0 -ymax 1.3 --lines"
 
+BBQUE_METRICS_ACT="$BBQUE_SYSROOT/var/bbque/metrics_act.fifo"
+BBQUE_METRICS_RUN="$BBQUE_SYSROOT/var/bbque/metrics_run.fifo"
 BBQUE_METRICS_AWM="$BBQUE_SYSROOT/var/bbque/metrics_awm.fifo"
 BBQUE_METRICS_APP="$BBQUE_SYSROOT/var/bbque/metrics_app.fifo"
 BBQUE_METRICS_WLM="$BBQUE_SYSROOT/var/bbque/metrics_wlm.fifo"
@@ -34,6 +36,22 @@ function setup_metric_plot {
 		--geometry $4 &
 }
 
+function setup_value_plot {
+	mkfifo $1 >/dev/null 2>&1
+	cat $1 | grep --line-buffered "$2" | \
+		stdbuf -oL tee $BBQUE_SYSROOT/var/bbque/$2.dat | \
+		$BBQUE_SYSROOT/bin/feedgnuplot \
+		--lines --points \
+		--nodomain --dataid \
+		--xlabel "Scheduling Events" \
+		--ylabel "$2" \
+		--title "$3" \
+		--autolegend \
+		--stream --xlen 40 \
+		--ymin 0 --ymax 12 \
+		--geometry $4 &
+}
+
 #
 #function metric_dispatch {
 #	stdbuf -oL tee $1
@@ -42,19 +60,26 @@ function setup_metric_plot {
 #}
 
 # Startup all the metrics plotter
+
+setup_value_plot $BBQUE_METRICS_ACT "PROF_AACT" \
+	"Active Applications Count (per priority class)" 640x195+624+18
+setup_value_plot $BBQUE_METRICS_RUN "PROF_ARUN" \
+	"Running Applications Count (per priority class)" 640x195--9+18
 setup_metric_plot $BBQUE_METRICS_AWM "PROF_AWMV" \
-	"AWMs Value (per priority class)" 640x313+624+18
+	"AWMs Value (per priority class)" 640x195+624+250
 setup_metric_plot $BBQUE_METRICS_APP "PROF_APPV" \
-	"APPs Value (per priority class)" 640x313--9+18
+	"APPs Value (per priority class)" 640x195--9+250
 setup_metric_plot $BBQUE_METRICS_FNS "PROF_FNSI" \
-	"Fairness Index (per priority class)" 640x313+624+361
+	"Fairness Index (per priority class)" 640x195+624+500
 setup_metric_plot $BBQUE_METRICS_WLM "PROF_WLMI" \
-	"Workload Mix Index (per priority class)" 640x313--9+361
+	"Workload Mix Index (per priority class)" 640x195--9+500
 sleep 2
 
 touch $BBQUE_LOGFILE >/dev/null 2>&1
 tail -f $BBQUE_LOGFILE | stdbuf -oL $BBQUE_SYSROOT/sbin/bbque-logparser | \
 	stdbuf -oL tee \
+	$BBQUE_METRICS_ACT \
+	$BBQUE_METRICS_RUN \
 	$BBQUE_METRICS_AWM \
 	$BBQUE_METRICS_APP \
 	$BBQUE_METRICS_WLM \
