[BospShell] Add new command to plot data files
This adds a new command to plot a command line specified metrics data file.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -92,6 +92,7 @@ bbque-stats   - Dump Bbqued daemon statistics
 bbque-stest   - Stress test the Bbqued dameon
 bbque-stopd   - Stop the Bbque daemon
 bbque-log     - Show the Bbque daemon log
+bbque-plot    - Plot the specified Index data file
 
 
 .:: Test Applications
@@ -241,6 +242,20 @@ LOG="${1:-$BBQUE_LOGFILE}"
 echo "Opening barbeque logfile [$LOG]..."
 aterm +sb -fn $FONT -geometry 115x56+-9-17 -title "BBQUE Log [$LOG]" \
 	-e tail -n+1 -f $LOG &
+}
+
+function bbque-plot {
+echo "Plotting DAT file [$1]..."
+cat $1 | $SYSROOT/bin/feedgnuplot \
+		--lines --points \
+		--nodomain --dataid \
+		--xlabel "Scheduling Events" \
+		--ylabel "<Some Y-Label>" \
+		--title "<Plot of `basename $1`>" \
+		--autolegend \
+		--xmax 40 \
+		--ymin 0 --ymax 12 \
+		--geometry 640x195+0+0
 }
 
 ################################################################################
