[RTLIB_AS-RTM] Add GoalInfo class
This commit introduces a new class, GoalInfo, that contains all the
information that can be extracted by the goal checking phase, together with
some useful methods. The CMakeLists.txt file has been changed to use also
the new header file.

Signed-off-by: Vincenzo Consales <vincenzo.consales@gmail.com>
Acked-by: Andrea Di Gesare <andrea.digesare@gmail.com>
Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/rtlib/monitors/CMakeLists.txt
+++ b/rtlib/monitors/CMakeLists.txt
@@ -41,6 +41,7 @@ set_property (TARGET bbque_monitors PROPERTY
 
 set_property (TARGET bbque_monitors PROPERTY PUBLIC_HEADER
 	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/monitor.h
+	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/goal_info.h
 	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/generic_window.h
 	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/time_monitor.h
 	${PROJECT_SOURCE_DIR}/include/bbque/rtlib/monitors/time_window.h
