[BospShell] Bugfix prompt issue
A proper escape on prompts colors setting avoid the prompt issues experimented
so far with "long lines".

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -292,7 +292,7 @@ $BOSPSH_PSEC21_FERRET_BIN \
 
 # Setup Shell variables
 PATH=$SYSROOT/sbin:$SYSROOT/bin:$SYSROOT/usr/bin:$PATH
-PS1="${BOSPSH_BLUE}[BOSPShell ${BOSPSH_LCYAN}\W${BOSPSH_BLUE}] \> ${BOSPSH_DEFAULT}"
+PS1="\[${BOSPSH_BLUE}\][BOSPShell \[${BOSPSH_LCYAN}\]\W\[${BOSPSH_BLUE}\]] \> \[${BOSPSH_DEFAULT}\]"
 export BOSP_SYSROOT=$SYSROOT
 
 # Dump out a nice BOSP Shell logo
