[BospShell] Spawn initialized new shells
This allows to spawn on demand a new shell which is already properly
initialized to work with BOSP commands.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -144,7 +144,8 @@ rm -rf $SYSROOT/@BBQUE_PATH_VAR@/*
 #     "xlsfonts | less"
 FONT=-misc-fixed-medium-r-normal--10-100-75-75-c-60-iso10646-1
 function bosp-shell {
-	aterm +sb -fn $FONT -geometry 118x37+711+240 -title "BBQUE Shell"  &
+	aterm +sb -fn $FONT -geometry 118x37+711+240 -title "BBQUE Shell"  \
+			-e /bin/bash --init-file $SYSROOT/etc/bbque/bosp_init.env &
 }
 
 ################################################################################
