[BospShell] Add console termination command
This new command allows to properly terminate a running BOSP Console.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -230,6 +230,11 @@ else
 fi
 }
 
+function bbque-console-stop {
+	[ -f $SYSROOT/var/bbque/bbque-console.pids ] && \
+		kill -TERM `cat $SYSROOT/var/bbque/bbque-console.pids`
+}
+
 BBQUE_LOGFILE="$SYSROOT/var/bbque/bbque.log"
 function bbque-log {
 LOG="${1:-$BBQUE_LOGFILE}"
