[Tools_LogParser] Add a BBQ log parser
This is a parser which extract the set of BBQ defined metrics from its logfile.
The identified metrics are dumped in output for further processing.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -42,3 +42,15 @@ install(PROGRAMS "${PROJECT_SOURCE_DIR}/tools/bbqueOpListBuilder.awk"
 	DESTINATION ${BBQUE_PATH_BBQ}
 	COMPONENT BarbequeUTILS
 	RENAME bbque-oplb)
+
+#----- Deploy the BBQ Metrics Plotting scripts
+configure_file (
+	"${PROJECT_SOURCE_DIR}/tools/bbqueLogParser.awk.in"
+	"${PROJECT_BINARY_DIR}/tools/bbqueLogParser.awk"
+	@ONLY
+)
+
+install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueLogParser.awk"
+	DESTINATION ${BBQUE_PATH_BBQ}
+	COMPONENT BarbequeUTILS
+	RENAME bbque-logparser)
