[Tools_LogPlot] Add a BBQ metrics plotter
This provides an initial version of a script to produce graphs of BBQ
computed metrics. This script is based on the bbqLogParser and the
feedgnuplot perl script which is expected to be deployed by the BOSP
building system.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -49,8 +49,17 @@ configure_file (
 	"${PROJECT_BINARY_DIR}/tools/bbqueLogParser.awk"
 	@ONLY
 )
+configure_file (
+	"${PROJECT_SOURCE_DIR}/tools/bbqueLogPlots.sh.in"
+	"${PROJECT_BINARY_DIR}/tools/bbqueLogPlots.sh"
+	@ONLY
+)
 
 install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueLogParser.awk"
 	DESTINATION ${BBQUE_PATH_BBQ}
 	COMPONENT BarbequeUTILS
 	RENAME bbque-logparser)
+install(PROGRAMS "${PROJECT_BINARY_DIR}/tools/bbqueLogPlots.sh"
+	DESTINATION ${BBQUE_PATH_BBQ}
+	COMPONENT BarbequeUTILS
+	RENAME bbque-logplots)
