[Tools_Console] Plot BBQ metrics
This add the plotting of BBQ metrics while the console is running.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/tools/bbqueConsole.sh.in
+++ b/tools/bbqueConsole.sh.in
@@ -247,3 +247,8 @@ aterm +sb -cr black -fn $FONT -geometry 74x41--8+363 \
 aterm +sb -fn $FONT -geometry 74x20--7-30 -title "CPUs usages" \
 	-e htop &
 
+################################################################################
+#     Center Panel
+################################################################################
+
+$BBQUE_SYSROOT/sbin/bbque-logplots >/dev/null 2>&1 &
