[Tools_Console] Keep track of workers
This patch keeps track of produced threads so that the console could be
clean terminated once required.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

Conflicts:

	tools/bbqueConsole.sh.in

--- a/tools/bbqueConsole.sh.in
+++ b/tools/bbqueConsole.sh.in
@@ -252,3 +252,9 @@ aterm +sb -fn $FONT -geometry 74x20--7-30 -title "CPUs usages" \
 ################################################################################
 
 $BBQUE_SYSROOT/sbin/bbque-logplots >/dev/null 2>&1 &
+
+jobs -p > $BBQUE_SYSROOT/var/bbque/bbque-console.pids
+echo
+echo "BBQ Console started!"
+echo "Use \"bbque-console-stop\" to terminate it once done"
+echo
