[BospShell] Update data-file plotter
This adds some parameters which could be used to customize the data files
plotter.

Signed-off-by: Patrick Bellasi <derkling@gmail.com>

--- a/config/bosp_init.env.in
+++ b/config/bosp_init.env.in
@@ -247,16 +247,30 @@ aterm +sb -fn $FONT -geometry 115x56+-9-17 -title "BBQUE Log [$LOG]" \
 
 function bbque-plot {
 echo "Plotting DAT file [$1]..."
+GTIT=${2:-"Plot of `basename $1`"}
+YLAB=${3:-"<Some Y-Label>"}
+OEPS=${4:-""}
+
+if [ "x$OEPS" == "x" ]; then
+		OCMD="--geometry 640x195+0+0"
+		echo "Dumping graph on screen..."
+else
+		OCMD="--hardcopy $OEPS"
+		echo "Dumping EPS to file [$OEPS]..."
+fi
+
 cat $1 | $SYSROOT/bin/feedgnuplot \
 		--lines --points \
 		--nodomain --dataid \
 		--xlabel "Scheduling Events" \
-		--ylabel "<Some Y-Label>" \
-		--title "<Plot of `basename $1`>" \
+		--ylabel "$YLAB" \
+		--title "$GTIT" \
 		--autolegend \
 		--xmax 40 \
 		--ymin 0 --ymax 12 \
-		--geometry 640x195+0+0
+		--extracmds "set border linewidth 1" \
+		--extracmds "set key left spacing 0.8" \
+		$OCMD
 }
 
 ################################################################################
